--- a/index.html
+++ b/index.html
@@ -1,46 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="/favicon.ico" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="theme-color" content="#000000" />
-	<meta name="description" content="Workspace for developers using MongoDB" />
-	<link rel="apple-touch-icon" href="/logo192.png" />
-	<link rel="preconnect" href="https://fonts.googleapis.com" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-	<!--
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#000000" />
+		<meta name="description" content="Workspace for developers using MongoDB" />
+		<link rel="apple-touch-icon" href="/logo192.png" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-	<link rel="manifest" href="/manifest.json" />
-	<title>Ark</title>
-</head>
+		<link rel="manifest" href="/manifest.json" />
+		<title>Ark</title>
+	</head>
 
-<body>
-	<noscript>You need to enable JavaScript to run this app.</noscript>
-	<div id="root"></div>
-	<script type="module" src="/src/index.tsx"></script>
-</body>
+	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
+		<script type="module" src="/src/index.tsx"></script>
+	</body>
 
-<script type="text/javascript">
-	window.doorbellOptions = {
-		id: "13305",
-		hideEmail: true,
-		hideButton: true,
-		email: "arkfeedback@ark.com",
-		// this works because of the custom html plugin for vite
-		appKey: '<%=VITE_ARK_DOORBELL_API_KEY%>'
-	};
-	(function (w, d, t) {
-		var hasLoaded = false;
-		function l() { if (hasLoaded) { return; } hasLoaded = true; window.doorbellOptions.windowLoaded = true; var g = d.createElement(t); g.id = 'doorbellScript'; g.type = 'text/javascript'; g.async = true; g.src = 'https://embed.doorbell.io/button/' + window.doorbellOptions['id'] + '?t=' + (new Date().getTime()); (d.getElementsByTagName('head')[0] || d.getElementsByTagName('body')[0]).appendChild(g); }
-		if (w.attachEvent) { w.attachEvent('onload', l); } else if (w.addEventListener) { w.addEventListener('load', l, false); } else { l(); }
-		if (d.readyState == 'complete') { l(); }
-	}(window, document, 'script'));
-</script>
-
-
+	<script type="text/javascript">
+		window.doorbellOptions = {
+			id: "13305",
+			hideEmail: true,
+			hideButton: true,
+			email: "arkfeedback@ark.com",
+			// this works because of the custom html plugin for vite
+			appKey: "<%=VITE_ARK_DOORBELL_API_KEY%>",
+		};
+		(function (w, d, t) {
+			var hasLoaded = false;
+			function l() {
+				if (hasLoaded) {
+					return;
+				}
+				hasLoaded = true;
+				window.doorbellOptions.windowLoaded = true;
+				var g = d.createElement(t);
+				g.id = "doorbellScript";
+				g.type = "text/javascript";
+				g.async = true;
+				g.src = "https://embed.doorbell.io/button/" + window.doorbellOptions["id"] + "?t=" + new Date().getTime();
+				(d.getElementsByTagName("head")[0] || d.getElementsByTagName("body")[0]).appendChild(g);
+			}
+			if (w.attachEvent) {
+				w.attachEvent("onload", l);
+			} else if (w.addEventListener) {
+				w.addEventListener("load", l, false);
+			} else {
+				l();
+			}
+			if (d.readyState == "complete") {
+				l();
+			}
+		})(window, document, "script");
+	</script>
 </html>
